# softethervpn-android-jwyoo

./: .gitignore  .gitmodules  README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ncurses.cmake  readline.cmake  sodium.cmake
app/src/main/cpp/include/: ifaddrs.c  ifaddrs.h
app/src/main/cpp/include/readline/: config.h
app/src/main/cpp/include/sodium/: version.h
app/src/main/java/me/lfasmpao/softethervpn/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
